black-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: black-deployment
  labels:
    app: black
    tier: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: black
      tier: frontend
      version: v1
  template:
    metadata:
      labels:
        app: black
        tier: frontend
        version: v1
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
      containers:
        - image: "ghcr.io/xxtamakixx/nextjs-app-black:test"
          name: black-container
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          securityContext:
            allowPrivilegeEscalation: false
